# reachability

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  FLOOR_AWARE_PLOTTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KRYLOV_README.md  LICENSE  PRODUCTION_RUN_IN_PROGRESS.md  PRODUCTION_RUN_SUMMARY.md  PUBLICATION_READY_IMPLEMENTATION.md  README.md  README_PRODUCTION.md  monitor_production.sh  pyproject.toml  run_production_sweeps.sh  run_production_sweeps_FAST.sh  setup.py  validate_implementation.py  validate_streaming_mode.py
.github/workflows/: lint.yml
archive_docs/: PRODUCTION_RUN_GUIDE.md  README_PRODUCTION.md
data/analysis/: alternative_fits_results.pkl  comprehensive_fits.pkl  data_quality_assessment.json
data/raw_logs/: comprehensive_reachability_20251209_153938.pkl  decay_canonical_extended.pkl  (+36 more)
docs/: CODE_AUDIT_REPORT.md  CRITERION_ORDERING_ANALYSIS.md  DATA_PROVENANCE.md  FIGURE_DOCUMENTATION.md  FIGURE_PROVENANCE.md  FLOQUET_DOCUMENTATION.md  GEO2_DOCUMENTATION.md  INTEGRABILITY_METHODOLOGY.md  MD_FILE_AUDIT.md  QUICK_START.md  floquet_results_latex.tex
fig_summary/: dens_test_new.csv  density_geo2.csv  density_geo2_smoke.csv  density_test.csv  density_test_floor_aware.csv  k15_test_floor_aware.csv  k16_geo2_smoke.csv  k30_gue_demo.csv  m_sweep_test.csv
fig_summary copy/: k_multi_test.csv  k_sweep_test.csv
jupyter_Project_Reachability/: jupyter_test_krylov.ipynb  plot_krylov_crit.ipynb  reach_bib.py  sim_krylov_criterion.ipynb
reach/: __init__.py  analysis.py  cli.py  floquet.py  krylov_cli.py  krylov_comparison.py  krylov_lambda_plots.py  logging_utils.py  mathematics.py  models.py  moment_criteria.py  optimization.py  optimize.py  settings.py  states.py  viz.py  viz_csv.py
reach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/: 5QUBIT_DRIVING_DISCOVERY.md  5qubit_code_experiment_20260108_145257.pkl  5qubit_code_experiment_20260108_145257_summary.json  5qubit_driving_discovery_20260109_202014.pkl  LAMBDA_VALIDATION_REPORT.md  driving_comparison_K4_20260109_123045.pkl  driving_optimization_K4_20260109_153957.pkl  floquet_operator_scan_product_0-ghz_bichromatic_20260107_151752.json  floquet_operator_scan_product_0-ghz_bichromatic_20260107_151903.json  floquet_operator_scan_product_0-ghz_bichromatic_20260107_152458.json  scaling_floquet_o2_20260108_040340.pkl  scaling_static_20260107_160738.pkl
scripts/: generate_overlap_hists.py  generate_summary_figs.py  plot_refresh.sh
tests/: __init__.py  test_floquet_implementation.py  test_krylov_continuous.py  test_smoke.py  verify_floquet.py
(+99 files in other folders)
